--- a/src/components/collection-preview/collection-preview.styles.scss
+++ b/src/components/collection-preview/collection-preview.styles.scss
@@ -6,10 +6,21 @@
     .title {
       font-size: 28px;
       margin-bottom: 25px;
+      font-weight: bold;
     }
   
     .preview {
       display: flex;
       justify-content: space-between;
+
+      @media screen and (max-width: 800px) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 18px
+      }
+    }
+
+    @media screen and (max-width: 800px) {
+      align-items: center;
     }
   }
