--- a/src/components/header/header-styles.scss
+++ b/src/components/header/header-styles.scss
@@ -1,36 +1,55 @@
-.logo-container {
-    height: 50px;
-    width: 70px;
-    padding: 0px 8px;
-    
-}
-
-
-a{
-    text-decoration: none !important;
-    color: black !important;
-    font-weight: bold;
-    font-size: 15px;
-}
-
-.title-h{
-    font-size: 25px;
-    font-weight: 700;
-    margin: auto;
-}
-
-.login{
-    border: none;
+.header {
+    height: 70px;
     width: 100%;
-    height: 35px;
-    color: black;
-    border-radius: 50px;
-    padding: 0 10px 0 10px;
-    font-weight: 300;
-    cursor: pointer;
-    
-    &:hover{
-        color: red !important;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 25px;
+
+
+    a{
+        text-decoration: none;
+        font-size: 15px;
+        color: black !important;
+    }
+  
+    .logo-container {
+      height: 100%;
+      width: 100px;
+      padding: 25px;
+
+      @media screen and (max-width: 800px){
+          width: 50px;
+          padding: 0px;
+        //   margin-bottom: 50%;
+      }
+    }
+  
+    .options {
+      width: 50%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+
+      
+  
+      .option {
+        padding: 10px 15px;
+        cursor: pointer;
+
+        &:hover{
+            color: red !important;
+        }
+    }
+            @media screen and (max-width: 800px){
+                width: 80%;
+            }
+      
     }
 
-}
+    @media screen and (max-width: 800px){
+        height: 60px;
+        padding: 10px;
+        margin-bottom: 20px;
+    }
+  }
