--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -2,6 +2,10 @@
     width: 380px;
     display: flex;
     flex-direction: column;
+
+    @media screen and (max-width: 800px) {
+      padding: 5px;
+    }
   }
   
   .title{
@@ -10,5 +14,10 @@
   .buttons{
     display: flex;
     justify-content: space-between;
+
+    @media screen and (max-width: 800px) {
+      width: 20px;
+      justify-content: space-between;
+    }
   }
   
