--- a/src/pages/checkout/checkout.style.scss
+++ b/src/pages/checkout/checkout.style.scss
@@ -5,6 +5,10 @@
     flex-direction: column;
     align-items: center;
     margin: 50px auto 0;
+
+    @media screen and (max-width: 800px){
+      width: 95%;
+    }
   
     .checkout-header {
       width: 100%;
@@ -12,6 +16,11 @@
       display: flex;
       justify-content: space-between;
       border-bottom: 1px solid darkgrey;
+
+      @media screen and (max-width: 800px){
+        width: 100%;
+        justify-content: space-between;
+      }
   
       .header-block {
         text-transform: capitalize;
@@ -19,6 +28,10 @@
   
         &:last-child {
           width: 8%;
+
+          @media screen and (max-width: 800px){
+            width: unset;
+          }
         }
       }
     }
